# args_oap

./: CHANGELOG.md  LICENSE  MANIFEST.in  Manual for args_oap version 2.4.txt  Manual_for_args_oap_version2.3.2.txt  README.md  setup.cfg  setup.py  stage_one_version2.3.2
args_oap/: ARGs_OAP.py  __init__.py  argoap_pipeline_stageone_version3  argoap_pipeline_stagetwo_version3.py  args_oap.py  stage_one.py  stage_two.py  utils.py
args_oap/DB/: SARG.fasta.pin  SARG.fasta.pot  SARG.fasta.pto  SARG_20210519.fasta.phr  SARG_20210519.fasta.pin  SARG_20210519.fasta.pot  SARG_20210519.fasta.psq  SARG_20210519.fasta.pto  SARG_structure.txt  all_KO30_name.list  gg85.fasta.amb  gg85.fasta.ann  gg85.fasta.ndb  gg85.fasta.nhr  gg85.fasta.nin  gg85.fasta.not  gg85.fasta.nsq  gg85.fasta.nto  gg85.fasta.pac  gg85.fasta.sa  multi-component_structure.txt  multi_component.txt  single-component_structure.txt  structure_20210519_for_pipeline.txt  two-component_structure.txt  two_component.txt
example/: meta-data.txt
src/args_oap/: __init__.py  api.py  args_oap.py  make_db.py  settings.py  stage_one.py  stage_two.py  utils.py
src/args_oap/db/: ko30_structure.txt  single-component_structure.txt  two-component_structure.txt
