[metadata]
name = args_oap
version = attr: args_oap.__version__
classifiers = 
	Programming Language :: Python :: 3

license = MIT
description = ARGs-OAP: Online Analysis Pipeline for Anti-biotic Resistance Genes Detection from Meta-genomic Data Using an Integrated Structured ARG-database.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    antibiotics
    antibiotic resistant genes

[options]
zip_safe = False
python_requires = >=3.8
package_dir =
    = src
packages = find:

[options.package_data]
args_oap = db/*

[options.entry_points]
    console_scripts = 
        args_oap = args_oap.args_oap:main

[options.packages.find]
    where = src